# recipe-scrapers-rest-api

./: Dockerfile  README.md  build.sh  pyproject.toml
recipe_scrapers_rest_api/: main.py  scraper.py
tests/unit_tests/: test_scraper.py
